# 389-ds-base

./: .gitignore  Makefile.am  configure.ac  rpm.mk
.github/scripts/: coverity-scan.sh
.github/workflows/: codeql.yml  coverity.yml  lmdbpytest.yml  pytest.yml
dirsrvtests/tests/perf/: memberof_test.py  ndncache_test.py
dirsrvtests/tests/suites/clu/: dbmon_test.py  dsidm_account_inactivity_test.py  dsidm_user_test.py  schema_test.py
dirsrvtests/tests/suites/healthcheck/: healthcheck_test.py
dirsrvtests/tests/suites/ndn_cache/: aggregate_bench_results.py  test_memberof_bench.py
dirsrvtests/tests/suites/pwp_storage/: storage_test.py
dirsrvtests/tests/suites/replication/: acceptance_test.py  access_log_simulation_test.py  log_analysis_report_test.py  repl_log_monitoring_test.py  ruvstore_test.py
dirsrvtests/tests/suites/systemtap/: __init__.py  _common.py  usdt_probes_test.py  usdt_stap_scripts_test.py  usdt_tracing_test.py
ldap/ldif/: template-dse-minimal.ldif.in  template-dse.ldif.in
ldap/schema/: 01core389.ldif
ldap/servers/slapd/: connection.c  daemon.c  dn.c  entry.c  fedse.c  haproxy.c  haproxy.h  ldaputil.c  libglobs.c  log.c  proto-slap.h  slap.h  slapi-plugin.h  util.c
ldap/servers/slapd/back-ldbm/db-bdb/: bdb_layer.c
profiling/stap/: probe_work_queue.stp  usdt-probes-design.md
rpm/: 389-ds-base.spec.in
scripts/: ndn-cache-macos-criterion-ab.sh  ndn-cache-vm-pytest-ab.sh
src/: Cargo.toml
src/cockpit/389-console/src/lib/monitor/: dbMonitor.jsx  replMonitor.jsx
src/cockpit/389-console/src/lib/plugins/: accountPolicy.jsx
src/cockpit/389-console/src/lib/server/: settings.jsx
src/lib389/: pyproject.toml  setup.py.in  validate_version.py
src/lib389/lib389/: __init__.py  ldclt.py  password_plugins.py  repltools.py  topologies.py
src/lib389/lib389/cli_conf/: monitor.py  replication.py
src/lib389/lib389/cli_conf/plugins/: accountpolicy.py
src/lib389/lib389/cli_idm/: __init__.py  account.py
src/lib389/lib389/instance/: setup.py
src/librslapd/: Cargo.toml
src/librslapd/benches/: ndn_cache.rs
src/librslapd/src/: cache.rs  lib.rs
src/librslapd/src/ndn_cache_v2/: dn_gen.rs  lock.rs  mod.rs  s3fifo.rs
src/plugins/pwdchan/: Cargo.toml
src/plugins/pwdchan/src/: lib.rs  pbkdf2.rs  pbkdf2_sha1.rs  pbkdf2_sha256.rs  pbkdf2_sha512.rs
src/slapi_r_plugin/src/: error.rs  plugin.rs
test/libslapd/haproxy/: parse.c
