[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "build-manpages>=2.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib389"
version = "2.4.0"  # Manually updated version, must match VERSION.sh
description = "A library for accessing and configuring the 389 Directory Server"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Red Hat, Inc., and William Brown", email = "389-devel@lists.fedoraproject.org"}
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyasn1",
    "pyasn1-modules",
    "python-dateutil",
    "argcomplete",
    "argparse-manpage",
    "python-ldap",
    "distro",
    "cryptography",
    "psutil",
]
keywords = ["389", "directory", "server", "test", "configure"]

[project.urls]
Homepage = "https://www.port389.org/docs/389ds/FAQ/upstream-test-framework.html"
Documentation = "https://www.port389.org/docs/389ds/index.html"
Repository = "https://github.com/389ds/389-ds-base"
Issues = "https://github.com/389ds/389-ds-base/issues"

[tool.setuptools]
packages = {find = {exclude = ["tests*"]}}

[tool.setuptools.data-files]
"/usr/sbin" = [
    "cli/dsctl",
    "cli/dsconf",
    "cli/dscreate",
    "cli/dsidm",
    "cli/openldap_to_ds",
]
"/usr/share/man/man8" = [
    "man/dsctl.8",
    "man/dsconf.8",
    "man/dscreate.8",
    "man/dsidm.8",
    "man/openldap_to_ds.8",
]
"/usr/libexec/dirsrv" = [
    "cli/dscontainer",
]